+ Ability to add a user's post (authenticated)   + Ability to delete the post for the user (authenticated)   +  Ability to update the post for the user (authenticated)   +  Ability to view all user posts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "esModuleInterop": true,
         "baseUrl": "./",
         "skipLibCheck": true,
-        "skipDefaultLibCheck": true
+        "skipDefaultLibCheck": true,
+        "resolveJsonModule" : true,
     },
     "include": [
         "src/**/*"
